# lxweather

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  lxweather.spec.in
debian/: changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  fileutil.c  fileutil.h  forecast.c  forecast.h  httputil.c  httputil.h  location.c  location.h  logutil.c  logutil.h  main.c  weatherwidget.c  weatherwidget.h  yahooutil.c  yahooutil.h
src/lxpanel_plugin/: Makefile.am  Makefile.in  weather.c
