bin_PROGRAMS= lxweather

lxweather_SOURCES= \
 main.c            \
 logutil.c         \
 yahooutil.c       \
 fileutil.c        \
 httputil.c        \
 location.c        \
 forecast.c        \
 weatherwidget.c 

lxweather_CPPFLAGS=     \
 $(DEPENDENCIES_CFLAGS)

lxweather_LDADD=      \
 $(DEPENDENCIES_LIBS)